# xorg-docs

./: .gitignore  ChangeLog  MAINTAINERS  Makefile.am  README.md  autogen.sh  configure.ac  registry  sgmlrules.in  xmlrules.in
general/: License.xml  Makefile.am  README.xml  ReleaseNotes.xml  Versions.xml
general/fonts/: Makefile.am  fonts.xml
general/graphics/: Makefile.am
general/input/: Makefile.am  XKB-Config.xml  XKB-Enhancing.xml
hardcopy/: Makefile.am
hardcopy/XPRINT/: Xprint_FAQ.html  Xprint_FAQ.txt  Xprint_FAQ.xml
man/: Consortium.man  X.man  XOrgFoundation.man  XProjectTeam.man  Xsecurity.man
man/general/: Makefile.am  Standards.man  X.man  XOrgFoundation.man  XProjectTeam.man  Xsecurity.man  security.man
sgml/: .gitignore  Darwin.sgml  Install.sgml  LICENSE.sgml  LynxOS.sgml  Makefile.am  NetBSD.sgml  OS2Notes.sgml  OpenBSD.sgml  README.sgml  RELNOTES.sgml  SCO.sgml  Solaris.sgml  Versions.sgml  XKB-Config.sgml  XKB-Enhancing.sgml  add.sh  dps.sgml  fonts.sgml  index.post  index.pre  mdefs.pre
sgml/core/: Makefile.am  Xserver-spec.sgml
sgml/fonts/: Makefile.am  fonts.sgml
sgml/graphics/: Makefile.am  dps.sgml
sgml/input/: Makefile.am  XKB-Config.sgml  XKB-Enhancing.sgml
sgml/security/: Makefile.am  XACE-Spec.sgml
specs/: Makefile.am  specindex.html
specs/BDF/: bdf.ms
specs/CTEXT/: Makefile.am  ctext.tbl.ms  ctext.xml
specs/FSProtocol/: protocol.ms
specs/ICCCM/: Makefile.am  icccm.ms  icccm.xml  indexmacros.t
specs/ICE/: ICElib.ms  ice.ms
specs/Render/: protocol
specs/SIAddresses/: README
specs/SM/: SMlib.ms  xsmp.ms
specs/X11/: CH01  CH09  CH13  abstract.t  indexmacros.t
specs/XDMCP/: xdmcp.ms
specs/XIM/: xim.ms
specs/XLFD/: Makefile.am  xlfd.tbl.ms  xlfd.xml
specs/XProtocol/: .gitignore  Makefile  Makefile.am  X11.protocol  indexmacros.t
specs/Xaw/: CH1  TPage_Credits  widg.idxmac.t
specs/Xext/: DPMS.ms  DPMSLib.ms  Makefile.am  bigreq.ms  buffer.ms  evi.ms  lbxalg.xml  record.ms  recordlib.ms  security.tex  shape.ms  shapelib.ms  sync.tex  synclib.tex  tog-cup.ms  xc-misc.ms
specs/Xi/: library.ms  porting.ms  protocol.ms  protocol.xml
specs/Xmu/: Xmu.ms
specs/Xserver/: Makefile.am  XACE-Spec.xml  analysis.xml  appgroup.xml  ddx.tbl.ms  secint.xml
specs/Xt/: CH01  CH02  strings.mit
specs/i18n/: Framework.ms  LocaleDB.ms  Trans.ms
specs/xtrans/: Xtrans.mm
